feat 어떤 키를 받을것인지 추가하고 지움 자유로운 레이아웃 배치 각 블럭당 여러가지의 설정 가능 키 입력을 받으면 레인 이펙트 오버레이 - 창모드간 자유로운 변경 수정 해야할 점 이펙트 나오는 위치가 자연스럽지 않음 offset 조절 필요 바의 가로 길이가 스냅핑을 했음에도 겹침

--- a/RainningkeyProgram/OverlayWindow.xaml
+++ b/RainningkeyProgram/OverlayWindow.xaml
@@ -9,6 +9,11 @@
         ResizeMode="NoResize"
         Height="550" Width="700"
         MouseLeftButtonDown="Window_MouseLeftButtonDown">
+    <Window.ContextMenu>
+        <ContextMenu>
+            <MenuItem Header="오버레이 종료" Click="MenuItem_CloseOverlay_Click"/>
+        </ContextMenu>
+    </Window.ContextMenu>
     <Grid>
         <Canvas x:Name="OverlayCanvas" Background="Transparent"/>
     </Grid>
